modificaciones en screen cart, home,product

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,9 +19,9 @@ button {
 .grid-container {
   display: grid;
   grid-template-areas:
-    'header'
-    'main'
-    'footer';
+    "header"
+    "main"
+    "footer";
   grid-template-columns: 1fr;
   grid-template-rows: 5rem 1fr 5rem;
   height: 100%;
@@ -45,6 +45,7 @@ button {
   color: #ffffff;
   text-decoration: none;
   padding: 1rem;
+  font-size: 2rem;
 }
 .header-links a:hover {
   color: #ff8000;
@@ -67,43 +68,46 @@ a:hover {
   color: #ff8000;
 }
 /* Home Screen */
-.products {
+.paquetes {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  border: 1px #000000;
 }
-.products li {
+.paquetes li {
   list-style-type: none;
   padding: 0;
   flex: 0 1 34rem;
   margin: 1rem;
   height: 50rem;
   border-bottom: 0.1rem #c0c0c0 solid;
+
+  box-shadow: 5px 10px 20px 1px rgb(0, 0, 0, 0.25);
 }
-.product {
+.paquete {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
 }
-.product-name {
+.paquete-name {
   font-size: 2rem;
   font-weight: bold;
 }
-.product-brand {
+.paquete-brand {
   font-size: 1.2rem;
   color: #808080;
 }
-.product-price {
+.paquete-price {
   font-size: 2rem;
   font-weight: bold;
 }
-.product-image {
-  max-width: 34rem;
-  max-height: 34rem;
+.paquete-image {
+  width: 34rem;
+  height: 20rem;
 }
-.product-rating {
+.paquete-rating {
   margin-bottom: 1rem;
 }
 /* Reviews */
